New config for Neovim, using LazyVim template

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -868,7 +868,7 @@ remember_window_size  yes
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 15 0 5
+window_padding_width 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -1022,7 +1022,7 @@ tab_bar_edge top
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style slant
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1145,17 +1145,16 @@ tab_powerline_style slanted
 # active_tab_title_template none
 
 #: Template to use for active tabs. If not specified falls back to : tab_title_template.
-
-active_tab_foreground   #cccccc
-active_tab_background   #282a2e
-active_tab_font_style   bold
+# active_tab_foreground   #cccccc
+# active_tab_background   #282a2e
+# active_tab_font_style   bold
 # inactive_tab_foreground #949AAC
-inactive_tab_background #1D1E21
-inactive_tab_font_style normal
+# inactive_tab_background #1D1E21
+# inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
 
-tab_bar_background #1D1E21
+# tab_bar_background #1D1E21
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -1176,7 +1175,7 @@ tab_bar_background #1D1E21
 
 #: The foreground and background colors.
 
-background_opacity 0.8
+background_opacity 1
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1229,8 +1228,7 @@ background_blur 16
 
 #: When background image is scaled, whether linear interpolation
 #: should be used.
-
-second_transparent_bg none
+# second_transparent_bg none
 
 #: When the background color matches this color, background_opacity is
 #: applied to it to render it as semi-transparent, just as for colors
@@ -1746,8 +1744,7 @@ second_transparent_bg none
 #: means to use the default system colors, a value of background means
 #: to use the background color of the currently active kitty window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
-
-macos_titlebar_color background
+# macos_titlebar_color background
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
@@ -2586,9 +2583,10 @@ macos_titlebar_color background
 
 #: }}}
 
+allow_remote_control yes
 
 # BEGIN_KITTY_THEME
-# Spacemacs
+# Rosé Pine Moon
 include current-theme.conf
 # END_KITTY_THEME
 
