--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,20 +1,53 @@
-foreground            #efefef
-background            #19191C
-selection_background  #5c4c79
-url_color             #29a1ae
-color0                #292b2d
-color8                #68717b
-color1                #ce527a
-color9                #ce527a
-color2                #2d9474
-color10               #84d82f
-color3                #bfa325
-color11               #edad0d
-color4                #4e97d6
-color12               #4c91cc
-color5                #bb6dc3
-color13               #bb6dc3
-color6                #299ba2
-color14               #299ba2
-color7                #e4e4e4
-color15               #f2f2f2
+## name: Rosé Pine Moon
+## author: mvllow
+## license: MIT
+## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
+## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+
+foreground               #e0def4
+background               #232136
+selection_foreground     #e0def4
+selection_background     #44415a
+
+# cursor                   #56526e
+# cursor_text_color        #e0def4
+
+url_color                #c4a7e7
+
+active_tab_foreground    #e0def4
+active_tab_background    #393552
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #232136
+
+# black
+color0   #393552
+color8   #6e6a86
+
+# red
+color1   #eb6f92
+color9   #eb6f92
+
+# green
+color2   #3e8fb0
+color10  #3e8fb0
+
+# yellow
+color3   #f6c177
+color11  #f6c177
+
+# blue
+color4   #9ccfd8
+color12  #9ccfd8
+
+# magenta
+color5   #c4a7e7
+color13  #c4a7e7
+
+# cyan
+color6   #ea9a97
+color14  #ea9a97
+
+# white
+color7   #e0def4
+color15  #e0def4
+
