testing a new neovim config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -868,7 +868,7 @@ remember_window_size  yes
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 5
+window_padding_width 0 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -2582,6 +2582,13 @@ background_blur 16
 #: }}}
 
 #: }}}
+
+kitty_mod super
+
+map kitty_mod+h kitten pass_keys.py left   ctrl+\`>h
+map kitty_mod+j kitten pass_keys.py bottom ctrl+\`>j
+map kitty_mod+k kitten pass_keys.py top    ctrl+\`>k
+map kitty_mod+l kitten pass_keys.py right  ctrl+\`>l
 
 allow_remote_control yes
 
