--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ bold_italic_font auto
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-font_size 14.0
+font_size 13.0
 
 #: Font size (in pts).
 
@@ -912,7 +912,7 @@ inactive_text_alpha 0.75
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes
+hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -2583,14 +2583,19 @@ background_blur 16
 
 #: }}}
 
-kitty_mod super
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
-map kitty_mod+h kitten pass_keys.py left   ctrl+\`>h
-map kitty_mod+j kitten pass_keys.py bottom ctrl+\`>j
-map kitty_mod+k kitten pass_keys.py top    ctrl+\`>k
-map kitty_mod+l kitten pass_keys.py right  ctrl+\`>l
+map cmd+left  kitten relative_resize.py left
+map cmd+right kitten relative_resize.py right
+map cmd+up    kitten relative_resize.py up
+map cmd+down  kitten relative_resize.py down
 
 allow_remote_control yes
+
+listen_on unix:/tmp/mykitty
 
 # BEGIN_KITTY_THEME
 # Rosé Pine Moon
