kitty couleurs et cmd+\ pour cwd

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2583,6 +2583,8 @@ background_blur 16
 
 #: }}}
 
+map cmd+\ launch --location=hsplit --cwd=current
+
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
