--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,6 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font Mono
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
@@ -19,8 +15,6 @@ bold_italic_font auto
 #: fonts manually, read the font specification syntax
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
-
-font_size 13.0
 
 #: Font size (in pts).
 
@@ -811,7 +805,6 @@ font_size 13.0
 
 #: Window layout {{{
 
-remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
 
@@ -868,7 +861,7 @@ remember_window_size  yes
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 0 5
+# window_padding_width 0 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -907,12 +900,12 @@ window_padding_width 0 5
 #: The color for the border of inactive windows in which a bell has
 #: occurred.
 
-inactive_text_alpha 0.75
+# inactive_text_alpha 0.75
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations titlebar-only
+# hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -2583,17 +2576,35 @@ background_blur 16
 
 #: }}}
 
+
+font_family         JetBrainsMono Nerd Font Mono
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
+font_size           13.0
+inactive_text_alpha 0.5
+
+mouse_hide_wait 2.0
+
+cursor            none
+cursor_text_color background
+
+hide_window_decorations titlebar-only
+remember_window_size    yes
+window_padding_width    5 5
+
 map cmd+\ launch --location=hsplit --cwd=current
+
+map cmd+left  kitten relative_resize.py left
+map cmd+right kitten relative_resize.py right
+map cmd+up    kitten relative_resize.py up
+map cmd+down  kitten relative_resize.py down
 
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
-map cmd+left  kitten relative_resize.py left
-map cmd+right kitten relative_resize.py right
-map cmd+up    kitten relative_resize.py up
-map cmd+down  kitten relative_resize.py down
 
 allow_remote_control yes
 
@@ -2604,5 +2615,3 @@ listen_on unix:/tmp/mykitty
 include current-theme.conf
 # END_KITTY_THEME
 
-cursor none
-cursor_text_color background
