--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -19,6 +19,9 @@ active_tab_background    #393552
 inactive_tab_foreground  #6e6a86
 inactive_tab_background  #232136
 
+active_border_color   #55507A
+inactive_border_color #232136
+
 # black
 color0   #393552
 color8   #6e6a86
