meilleur split pour kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1168,7 +1168,7 @@ tab_powerline_style slanted
 
 #: The foreground and background colors.
 
-background_opacity 1
+# background_opacity 0.0
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1193,7 +1193,7 @@ background_opacity 1
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-background_blur 16
+# background_blur 0
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -2593,7 +2593,13 @@ hide_window_decorations titlebar-only
 remember_window_size    yes
 window_padding_width    5 5
 
+macos_colorspace srgb
+background_opacity 1
+
+enabled_layouts fat:bias=70
+
 map cmd+\ launch --location=hsplit --cwd=current
+# map cmd+\ kitten lilTerm.py 1
 
 map cmd+left  kitten relative_resize.py left
 map cmd+right kitten relative_resize.py right
