--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2596,10 +2596,12 @@ window_padding_width    5 5
 macos_colorspace srgb
 background_opacity 1
 
-enabled_layouts fat:bias=70
+enabled_layouts splits
 
-map cmd+\ launch --location=hsplit --cwd=current
-# map cmd+\ kitten lilTerm.py 1
+# map cmd+\ launch --location=hsplit --cwd=current
+# map cmd+| launch --location=vsplit --cwd=current
+map cmd+\ kitten lilTerm.py h
+map cmd+| kitten lilTerm.py v
 
 map cmd+left  kitten relative_resize.py left
 map cmd+right kitten relative_resize.py right
