hoogle, haskell, tidal_ls git add .

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2578,6 +2578,7 @@ tab_powerline_style slanted
 
 
 font_family         JetBrainsMono Nerd Font Mono
+# font_family         family="JetBrainsMono Nerd Font Mono"
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
