--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -5,7 +5,7 @@
 ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
 
-foreground               #e0def4
+foreground               #bebec1
 background               #232136
 selection_foreground     #e0def4
 selection_background     #44415a
@@ -26,6 +26,10 @@ inactive_border_color #232136
 # black
 color0   #393552
 color8   #6e6a86
+# color8   #393552
+
+# color0   #232136
+# color8   #232136
 
 # red
 color1   #eb6f92
@@ -52,6 +56,6 @@ color6   #ea9a97
 color14  #ea9a97
 
 # white
-color7   #e0def4
-color15  #e0def4
+color7   #afacbe
+color15  #afacbe
 
