--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2578,7 +2578,6 @@ tab_powerline_style slanted
 
 
 font_family         JetBrainsMono Nerd Font Mono
-# font_family         family="JetBrainsMono Nerd Font Mono"
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
@@ -2596,13 +2595,14 @@ window_padding_width    5 5
 
 macos_colorspace srgb
 background_opacity 1
+# background_blur 8
 
 enabled_layouts splits
 
 # map cmd+\ launch --location=hsplit --cwd=current
 # map cmd+| launch --location=vsplit --cwd=current
-map cmd+\ kitten lilTerm.py h
-map cmd+| kitten lilTerm.py v
+map cmd+\ kitten splits.py h
+map cmd+| kitten splits.py v
 
 map cmd+left  kitten relative_resize.py left
 map cmd+right kitten relative_resize.py right
@@ -2616,8 +2616,9 @@ map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 
 allow_remote_control yes
-
 listen_on unix:/tmp/mykitty
+# allow_remote_control socket-only
+# listen_on unix:/tmp/kitty
 
 # BEGIN_KITTY_THEME
 # Rosé Pine Moon
