--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2582,7 +2582,8 @@ bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 font_size           13.0
-inactive_text_alpha 0.5
+
+inactive_text_alpha 0.6
 
 mouse_hide_wait 2.0
 
@@ -2594,7 +2595,7 @@ remember_window_size    yes
 window_padding_width    5 5
 
 macos_colorspace srgb
-background_opacity 1
+# background_opacity 0.95
 # background_blur 8
 
 enabled_layouts splits
