--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2581,7 +2581,7 @@ font_family         JetBrainsMono Nerd Font Mono
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
-font_size           13.0
+font_size           14.0
 
 inactive_text_alpha 0.6
 
@@ -2592,11 +2592,11 @@ cursor_text_color background
 
 hide_window_decorations titlebar-only
 remember_window_size    yes
-window_padding_width    5 5
+window_padding_width    4 4 2 4
 
 macos_colorspace srgb
-# background_opacity 0.95
-# background_blur 8
+background_opacity 0.90
+background_blur 16
 
 enabled_layouts splits
 
