bias for splits

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2590,12 +2590,13 @@ mouse_hide_wait 2.0
 cursor            none
 cursor_text_color background
 
+# macos_titlebar_color    background
 hide_window_decorations titlebar-only
 remember_window_size    yes
 window_padding_width    4 4 2 4
 
 macos_colorspace srgb
-background_opacity 0.90
+background_opacity 0.99
 background_blur 16
 
 enabled_layouts splits
