--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -6,7 +6,9 @@
 
 
 foreground               #bebec1
-background               #232136
+# background               #232136
+# background               #242334
+background               #262b38
 selection_foreground     #e0def4
 selection_background     #44415a
 
@@ -16,9 +18,11 @@ selection_background     #44415a
 url_color                #c4a7e7
 
 active_tab_foreground    #e0def4
-active_tab_background    #393552
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #232136
+# active_tab_background    #393552
+active_tab_background    #343B4C
+# inactive_tab_foreground  #6e6a86
+inactive_tab_foreground  #677598
+inactive_tab_background  #262b38
 
 active_border_color   #55507A
 inactive_border_color #232136
@@ -40,12 +44,12 @@ color2   #3e8fb0
 color10  #3e8fb0
 
 # yellow
-color3   #f6c177
-color11  #f6c177
+color3   #d7b175
+color11  #d7b175
 
 # blue
-color4   #9ccfd8
-color12  #9ccfd8
+color4   #a3cad1
+color12  #a3cad1
 
 # magenta
 color5   #c4a7e7
