fix border + black colors

--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -10,7 +10,7 @@ foreground               #bebec1
 # background               #242334
 background               #262b38
 selection_foreground     #e0def4
-selection_background     #44415a
+selection_background     #48526a
 
 # cursor                   #56526e
 # cursor_text_color        #e0def4
@@ -24,12 +24,13 @@ active_tab_background    #343B4C
 inactive_tab_foreground  #677598
 inactive_tab_background  #262b38
 
-active_border_color   #55507A
-inactive_border_color #232136
+active_border_color   #535E79
+inactive_border_color #48526a
 
 # black
-color0   #393552
-color8   #6e6a86
+color0   #677598
+color8   #677598
+
 # color8   #393552
 
 # color0   #232136
