--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2577,9 +2577,10 @@ tab_powerline_style slanted
 #: }}}
 
 
+# font_family         JetBrainsMono Nerd Font Mono
 font_family         JetBrainsMono Nerd Font Mono
-bold_font           auto
-italic_font         auto
+bold_font           JetBrainsMono Nerd Font
+italic_font         JetBrainsMono Nerd Font Mono
 bold_italic_font    auto
 font_size           12.0
 
