--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -6,8 +6,7 @@
 
 
 foreground               #bebec1
-# background               #232136
-# background               #242334
+# background               #262b38
 background               #262b38
 selection_foreground     #e0def4
 selection_background     #48526a
