--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1041,7 +1041,7 @@ tab_bar_style powerline
 #:     a mapping for the select_tab action which presents you with a list of
 #:     tabs and allows for easy switching to a tab.
 
-tab_bar_align left
+tab_bar_align center
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
@@ -2593,10 +2593,10 @@ cursor_text_color background
 # macos_titlebar_color    background
 hide_window_decorations titlebar-only
 remember_window_size    yes
-window_padding_width    0 0 0 0
+window_padding_width    0 5
 
 macos_colorspace srgb
-background_opacity 0.92
+background_opacity 1
 background_blur 64
 
 enabled_layouts splits
