neutral greys + bg

--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -6,19 +6,19 @@
 
 
 foreground               #bebec1
-background               #262b38
-selection_foreground     #e0def4
-selection_background     #48526a
+background               #222222
+selection_foreground     #eeeeee
+selection_background     #333333
 
 # cursor                   #56526e
 # cursor_text_color        #e0def4
 
 url_color                #c4a7e7
 
-active_tab_foreground    #e0def4
-active_tab_background    #343B4C
-inactive_tab_foreground  #677598
-inactive_tab_background  #262b38
+active_tab_foreground    #eeeeee
+active_tab_background    #282828
+inactive_tab_foreground  #666666
+inactive_tab_background  #222222
 
 active_border_color   #535E79
 inactive_border_color #48526a
