bring tab bar settings down at the bottom

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1000,7 +1000,7 @@
 
 #: Tab bar {{{
 
-tab_bar_edge top
+# tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -1015,7 +1015,7 @@ tab_bar_edge top
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style powerline
+# tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1041,7 +1041,7 @@ tab_bar_style powerline
 #:     a mapping for the select_tab action which presents you with a list of
 #:     tabs and allows for easy switching to a tab.
 
-tab_bar_align center
+# tab_bar_align center
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
@@ -1073,7 +1073,7 @@ tab_bar_align center
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_powerline_style slanted
+# tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -2600,6 +2600,14 @@ background_opacity 0.66
 background_blur 64
 
 enabled_layouts splits
+
+tab_bar_edge top
+tab_bar_align center
+
+tab_bar_style powerline
+tab_powerline_style slanted
+# tab_separator " ┇"
+# tab_title_max_length 0
 
 # map cmd+\ launch --location=hsplit --cwd=current
 # map cmd+| launch --location=vsplit --cwd=current
