--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2576,12 +2576,7 @@
 
 #: }}}
 
-
-font_family         JetBrainsMono Nerd Font Mono
-bold_font           JetBrainsMono Nerd Font 
-italic_font         JetBrainsMono Nerd Font Mono
-bold_italic_font    auto
-font_size           13.0
+font_size        13.0
 
 inactive_text_alpha 0.6
 
@@ -2606,11 +2601,7 @@ tab_bar_align center
 
 tab_bar_style powerline
 tab_powerline_style slanted
-# tab_separator " ┇"
-# tab_title_max_length 0
 
-# map cmd+\ launch --location=hsplit --cwd=current
-# map cmd+| launch --location=vsplit --cwd=current
 map cmd+\ kitten splits.py h
 map cmd+| kitten splits.py v
 
@@ -2627,11 +2618,17 @@ map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
-# allow_remote_control socket-only
-# listen_on unix:/tmp/kitty
 
 # BEGIN_KITTY_THEME
 # Rosé Pine Moon
 include current-theme.conf
 # END_KITTY_THEME
 
+
+
+# BEGIN_KITTY_FONTS
+font_family      family='JetBrainsMono Nerd Font Mono' style='Light'
+bold_font        auto
+italic_font      family='JetBrainsMono Nerd Font Mono' style='Light'
+bold_italic_font auto
+# END_KITTY_FONTS
