--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2576,10 +2576,6 @@
 
 #: }}}
 
-font_size        13.0
-
-inactive_text_alpha 0.6
-
 mouse_hide_wait 2.0
 
 cursor            none
@@ -2615,7 +2611,6 @@ map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
-
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
 
@@ -2624,11 +2619,11 @@ listen_on unix:/tmp/mykitty
 include current-theme.conf
 # END_KITTY_THEME
 
-
-
 # BEGIN_KITTY_FONTS
 font_family      family='JetBrainsMono Nerd Font Mono' style='Light'
-bold_font        auto
+bold_font        family='JetBrainsMono Nerd Font Mono' style='Bold'
 italic_font      family='JetBrainsMono Nerd Font Mono' style='Light'
 bold_italic_font auto
+font_size        14.0
+inactive_text_alpha 0.6
 # END_KITTY_FONTS
