--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -9,6 +9,9 @@ bind C-s send-prefix
 # setw -g monitor-activity off
 # set -g bell-action none
 
+# cursor
+set -g cursor-style blinking-bar
+
 # clock mode
 setw -g clock-mode-colour colour1
 
@@ -31,6 +34,10 @@ setw -g window-status-current-format ' #I #W #F '
 setw -g window-status-style 'fg=colour1 dim'
 setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
 setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # messages
 set -g message-style 'fg=colour2 bg=colour0 bold'
