--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -29,11 +29,11 @@ set -g status-position bottom
 set -g status-justify centre
 set -g status-style 'fg=colour8'
 
-setw -g window-status-current-style 'fg=colour2 bg=default bold'
-setw -g window-status-current-format ' #I #W #F '
-setw -g window-status-style 'fg=colour1 dim'
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
-setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+setw -g window-status-current-style 'fg=colour4 bg=default bold'
+setw -g window-status-current-format '[#W #F]'
+setw -g window-status-style 'fg=colour8 dim'
+setw -g window-status-format '[#W #F]'
+setw -g window-status-bell-style 'fg=colour3 bg=default bold'
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
