try setup cursor

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ bind C-s send-prefix
 # set -g bell-action none
 
 # cursor
-set -g cursor-style blinking-bar
+# set -g cursor-style blinking-bar
 
 # clock mode
 setw -g clock-mode-colour colour1
