--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,6 +11,7 @@ bind C-s send-prefix
 
 # cursor
 # set -g cursor-style blinking-bar
+set -g cursor-colour "#bbbbbb"
 
 # clock mode
 setw -g clock-mode-colour colour1
