--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,20 +24,20 @@ set -g pane-border-style 'fg=colour0'
 set -g pane-active-border-style 'fg=colour8'
 
 # statusbar
-set -g status-left ''
-set -g status-right ''
+set -g status-left     ''
+set -g status-right    ''
 set -g status-position bottom
-set -g status-justify centre
-set -g status-style 'fg=colour8'
+set -g status-justify  centre
+set -g status-style    'fg=colour8'
 
-setw -g window-status-current-style 'fg=colour4 bg=default bold'
+setw -g window-status-current-style  'fg=colour4 bg=default bold'
 setw -g window-status-current-format '[#W #F]'
-setw -g window-status-style 'fg=colour8 dim'
-setw -g window-status-format '[#W #F]'
-setw -g window-status-bell-style 'fg=colour3 bg=default bold'
+setw -g window-status-style          'fg=colour8 dim'
+setw -g window-status-format         '[#W #F]'
+setw -g window-status-bell-style     'fg=colour3 bg=default bold'
 
 # Start windows and panes at 1, not 0
-set -g base-index 1
+set  -g base-index      1
 setw -g pane-base-index 1
 
 # messages
@@ -45,9 +45,15 @@ set -g message-style 'fg=colour2 bg=colour0 bold'
 
 # Split panes with \ and -
 bind \\ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind -  split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+
+#resize panes
+bind-key -r -T prefix C-Up    resize-pane -U
+bind-key -r -T prefix C-Down  resize-pane -D
+bind-key -r -T prefix C-Left  resize-pane -L
+bind-key -r -T prefix C-Right resize-pane -R
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
