cursor + save plugins

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
 bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 set -g prefix C-s
 bind C-s send-prefix
+bind C-l send-keys 'C-l'
 
 # don't do anything when a 'bell' rings
 # set -g visual-activity off
@@ -10,8 +11,10 @@ bind C-s send-prefix
 # set -g bell-action none
 
 # cursor
-# set -g cursor-style blinking-bar
-set -g cursor-colour "#bbbbbb"
+set -g cursor-style blinking-bar
+set -g cursor-colour "terminal"
+
+set -g mouse on
 
 # clock mode
 setw -g clock-mode-colour colour1
@@ -49,19 +52,21 @@ bind -  split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# save session
+set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'on'
+
 #resize panes
 bind-key -r -T prefix C-Up    resize-pane -U
 bind-key -r -T prefix C-Down  resize-pane -D
 bind-key -r -T prefix C-Left  resize-pane -L
 bind-key -r -T prefix C-Right resize-pane -R
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
