--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -11,6 +11,6 @@ font-family = JetBrainsMono NFM Light
 font-style-italic = false
 font-size = 15
 
-background = #202020
+background = #19191E
 
 cursor-style-blink = true
