--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,27 +3,19 @@ set -g prefix C-s
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
 
-# don't do anything when a 'bell' rings
-# set -g visual-activity off
-# set -g visual-bell off
-# set -g visual-silence off
-# setw -g monitor-activity off
-# set -g bell-action none
-
 # cursor
 set -g cursor-style blinking-bar
-set -g cursor-colour "terminal"
-
+set -g cursor-colour white
 set -g mouse on
 
 # clock mode
 setw -g clock-mode-colour colour1
 
 # copy mode
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+setw -g mode-style 'fg=black bg=blue bold'
 
 # pane borders
-set -g pane-border-style 'fg=colour0'
+set -g pane-border-style 'fg=black'
 set -g pane-active-border-style 'fg=colour8'
 
 # statusbar
@@ -44,17 +36,13 @@ set  -g base-index      1
 setw -g pane-base-index 1
 
 # messages
-set -g message-style 'fg=colour2 bg=colour0 bold'
+set -g message-style 'fg=blue bg=default bold'
 
 # Split panes with \ and -
 bind \\ split-window -h -c "#{pane_current_path}"
 bind -  split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
-
-# save session
-set -g @resurrect-strategy-nvim 'session'
-set -g @continuum-restore 'on'
 
 #resize panes
 bind-key -r -T prefix C-Up    resize-pane -U
@@ -65,8 +53,6 @@ bind-key -r -T prefix C-Right resize-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
