do not set the cursor color here

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ bind C-l send-keys 'C-l'
 
 # cursor
 set -g cursor-style blinking-bar
-set -g cursor-colour white
+# set -g cursor-colour white
 set -g mouse on
 
 # clock mode
