--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -6,10 +6,16 @@ padding = {x = 4, y = 8}
 dynamic_padding = true
 opacity = 0.85
 blur = true
-
 decorations = "Buttonless"
 
 [font]
 normal = { family = "JetBrainsMono Nerd Font Mono", style = "ExtraLight" }
 italic = { style = "Light" }
 size = 16
+
+[cursor.style]
+shape = "Block"
+blinking = "On"
+
+[mouse]
+hide_when_typing = true
