--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-s
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
 
+set -g default-shell "/bin/zsh"
 set -g default-terminal "tmux-256color"
 
 # set -g default-terminal "screen-256color"
