--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -8,7 +8,8 @@ $git_status\
 $cmd_duration\
 $line_break\
 $python\
-$character"""
+$character
+"""
 
 
 [username]
@@ -41,7 +42,7 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218)($ahead_behind$stashed)]($style)"
 style = "cyan"
 conflicted = "​"
 untracked = "​"
