--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,13 +1,11 @@
 format = """
-$username\
-$hostname\
+$username$hostname\
 $directory\
 $git_branch\
 $git_state\
 $git_status\
-$cmd_duration\
-$line_break\
 $python\
+$line_break\
 $character
 """
 
@@ -22,9 +20,9 @@ show_always = true
 
 [hostname]
 style = 'purple'
-format = '[$ssh_symbol$hostname]($style) '
+format = '[@$ssh_symbol$hostname]($style) '
 ssh_only = false
-aliases = {"Max-Macbook-Pro" = "@home"}
+aliases = {"Max-Macbook-Pro" = "home"}
 
 [directory]
 style = "blue"
@@ -42,7 +40,7 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted )](218)($ahead_behind$stashed )]($style)"
 style = "cyan"
 conflicted = "​"
 untracked = "​"
