--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,9 +1,7 @@
 format = """
 $username$hostname\
 $directory\
-$git_branch\
-$git_state\
-$git_status\
+$git_branch$git_state$git_status\
 $python\
 $line_break\
 $character
@@ -40,7 +38,7 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted )](218)($ahead_behind$stashed )]($style)"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218)($ahead_behind$stashed)]($style)"
 style = "cyan"
 conflicted = "​"
 untracked = "​"
