do not set cursor style

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 
 
 # cursor
-set -g cursor-style blinking-bar
+# set -g cursor-style blinking-bar
 # set -g cursor-colour white
 set -g mouse on
 
