--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -38,8 +38,8 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218)($ahead_behind$stashed)]($style)"
-style = "cyan"
+style = "purple"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)($style)](218)($ahead_behind$stashed)]($style)"
 conflicted = "​"
 untracked = "​"
 modified = "​"
