--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,12 +1,11 @@
 format = """
-$username$hostname\
+$username$hostname \
 $directory\
-$git_branch$git_state$git_status\
-$python\
+$git_branch$git_state$git_status \
+$python \
 $line_break\
 $character
 """
-
 
 [username]
 style_user = 'purple'
@@ -18,8 +17,8 @@ show_always = true
 
 [hostname]
 style = 'purple'
-format = '[@$ssh_symbol$hostname]($style) '
-ssh_only = false
+format = '[$ssh_symbol$hostname]($style)'
+ssh_only = true
 aliases = {"Max-Macbook-Pro" = "home"}
 
 [directory]
@@ -39,7 +38,7 @@ style = "bright-black"
 
 [git_status]
 style = "purple"
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)($style)](218)($ahead_behind$stashed)]($style)"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](yellow)($ahead_behind$stashed)]($style)"
 conflicted = "​"
 untracked = "​"
 modified = "​"
@@ -49,13 +48,13 @@ deleted = "​"
 stashed = "≡"
 
 [git_state]
-format = '\([$state( $progress_current/$progress_total)]($style)\) '
+format = '\([$state( $progress_current/$progress_total)]($style)\)'
 style = "bright-black"
 
 [cmd_duration]
-format = "[$duration]($style) "
+format = "[$duration]($style)"
 style = "yellow"
 
 [python]
-format = "[$virtualenv]($style) "
+format = "[$virtualenv]($style)"
 style = "bright-black"
