--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,7 +1,7 @@
 format = """
 $username$hostname \
 $directory\
-$git_branch$git_state$git_status \
+($git_branch$git_state$git_status) \
 $python \
 $line_break\
 $character
@@ -38,14 +38,8 @@ style = "bright-black"
 
 [git_status]
 style = "purple"
-# format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)]($ahead_behind$stashed)]($style)"
-format = '([$all_status$ahead_behind]($style) )'
-# conflicted = ""
-# untracked = ""
+format = '([$all_status$ahead_behind]($style))'
 modified = "*"
-# staged = ""
-# renamed = ""
-# deleted = ""
 stashed = "≡"
 
 [git_state]
