--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,13 +3,12 @@ set -g prefix C-s
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
 
-set -g default-shell "/bin/zsh"
+# set -g default-shell "/bin/zsh"
 set -g default-terminal "tmux-256color"
-
+#
 set -as terminal-overrides ",*:RGB,*:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
 
 # cursor
 set -g mouse on
@@ -59,8 +58,7 @@ bind-key -r -T prefix C-Right resize-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
-set -g focus-events off
+# set -g @plugin 'aserowy/tmux.nvim'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
