--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,6 +10,10 @@ set -as terminal-overrides ",*:RGB,*:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
+# Enable extended keys for proper Ctrl detection
+# set -s extended-keys always
+# set -as terminal-features '*:extkeys'
+
 # cursor
 set -g mouse on
 
@@ -29,6 +33,8 @@ set -g status-right    ''
 set -g status-position bottom
 set -g status-justify  centre
 set -g status-style    'fg=colour8'
+
+set -g popup-border-lines 'rounded'
 
 setw -g window-status-current-style  'fg=colour4 bg=default bold'
 setw -g window-status-current-format '[#W #F]'
@@ -55,9 +61,16 @@ bind-key -r -T prefix C-Down  resize-pane -D
 bind-key -r -T prefix C-Left  resize-pane -L
 bind-key -r -T prefix C-Right resize-pane -R
 
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 # set -g @plugin 'aserowy/tmux.nvim'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
