--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -5,18 +5,42 @@ cursor-text = #000000
 
 macos-titlebar-proxy-icon = hidden
 
-window-decoration = none
+window-decoration = auto
 background-opacity = 1
 background-blur = true
 
 font-family = JetBrainsMono NFM Regular
 font-style-italic = false
 font-size = 16
-adjust-cell-width = -5%
-adjust-cell-height = 10%
 
-# theme = "Later This Evening"
+# adjust-cell-width = -5%
+# adjust-cell-height = 10%
+
+# theme = "Kanagawa Dragon"
+
+palette = 0=#0d0c0c
+palette = 1=#c4746e
+palette = 2=#8a9a7b
+palette = 3=#c6b7a0
+palette = 4=#8ba4b0
+palette = 5=#a292a3
+palette = 6=#8ea4a2
+palette = 7=#c8c093
+palette = 8=#a6a69c
+palette = 9=#e46876
+palette = 10=#87a987
+palette = 11=#e6c384
+palette = 12=#7fb4ca
+palette = 13=#938aa9
+palette = 14=#7aa89f
+palette = 15=#c5c9c5
+
+# background = 181616
 background = #222222
+foreground = c6b7a0
+cursor-color = c8c093
+selection-background = 2d4f67
+selection-foreground = c8c093
 
 cursor-style-blink = true
 cursor-invert-fg-bg = false
