try some terminal options

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,8 +11,11 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # Enable extended keys for proper Ctrl detection
-# set -s extended-keys always
-# set -as terminal-features '*:extkeys'
+set -s extended-keys always
+set -as terminal-features '*:extkeys'
+
+# Fix option key handling for accented characters on macOS
+set-option -g assume-paste-time 0
 
 # cursor
 set -g mouse on
