--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,5 @@
 mouse-hide-while-typing = true
 
-cursor-color = #dddddd
 cursor-text = #000000
 
 cursor-style-blink = true
@@ -19,6 +18,6 @@ font-style-italic = false
 font-size = 16
 
 # adjust-cell-width = -5%
-# adjust-cell-height = 10%
+adjust-cell-height = 5%
 
 theme = dark:my-kanagawa-dark,light:"Monokai Pro Light"
