--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,18 +1,16 @@
-bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 set -g prefix C-s
+
+bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
 
-# set -g default-shell "/bin/zsh"
 set -g default-terminal "tmux-256color"
-#
 set -as terminal-overrides ",*:RGB,*:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-# Enable extended keys for proper Ctrl detection
-set -s extended-keys always
-set -as terminal-features '*:extkeys'
+# set -s extended-keys always
+# set -as terminal-features '*:extkeys'
 
 # Fix option key handling for accented characters on macOS
 set-option -g assume-paste-time 0
@@ -33,7 +31,7 @@ set -g pane-active-border-style 'fg=colour8'
 # statusbar
 set -g status-left     ''
 set -g status-right    ''
-set -g status-position bottom
+set -g status-position top
 set -g status-justify  centre
 set -g status-style    'fg=colour8'
 
@@ -58,12 +56,29 @@ bind -  split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+bind c new-window -c "#{pane_current_path}"
+
+# Sesh
+bind "s" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --preview-window 'right:55%' \
+    --preview 'sesh preview {}'
+)\""
+
 #resize panes
 bind-key -r -T prefix C-Up    resize-pane -U
 bind-key -r -T prefix C-Down  resize-pane -D
 bind-key -r -T prefix C-Left  resize-pane -L
 bind-key -r -T prefix C-Right resize-pane -R
-
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
