--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -9,8 +9,8 @@ set -as terminal-overrides ",*:RGB,*:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-# set -s extended-keys always
-# set -as terminal-features '*:extkeys'
+set -s extended-keys always
+set -as terminal-features '*:extkeys'
 
 # Fix option key handling for accented characters on macOS
 set-option -g assume-paste-time 0
@@ -31,7 +31,7 @@ set -g pane-active-border-style 'fg=colour8'
 # statusbar
 set -g status-left     ''
 set -g status-right    ''
-set -g status-position top
+set -g status-position bottom
 set -g status-justify  centre
 set -g status-style    'fg=colour8'
 
