remap sesh to `prefix C-s`

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -59,7 +59,7 @@ unbind %
 bind c new-window -c "#{pane_current_path}"
 
 # Sesh
-bind "s" run-shell "sesh connect \"$(
+bind C-s run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
