fix cursor-text color

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
 mouse-hide-while-typing = true
 
-cursor-text = #000000
+# cursor-text = #000000
 
 cursor-style-blink = true
 cursor-invert-fg-bg = false
