--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -60,7 +60,7 @@ bind c new-window -c "#{pane_current_path}"
 
 # Sesh
 bind C-s run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 80%,70% \
+  sesh list --icons | fzf-tmux -p 66%,66% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
@@ -70,8 +70,8 @@ bind C-s run-shell "sesh connect \"$(
     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --preview-window 'right:55%' \
-    --preview 'sesh preview {}'
+    # --preview-window 'right:55%' \
+    # --preview 'sesh preview {}'
 )\""
 
 #resize panes
