--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -13,11 +13,12 @@ background-opacity = 1
 background-blur = true
 
 
-font-family = JetBrainsMono NFM Regular
-font-style-italic = false
+# font-family = JetBrainsMono NFM Regular
+font-family = CommitMono
+font-style-italic = true
 font-size = 16
 
 # adjust-cell-width = -5%
-adjust-cell-height = 5%
+# adjust-cell-height = 5%
 
 theme = dark:my-kanagawa-dark,light:"Monokai Pro Light"
