patch(tmux): renumber windows

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -43,9 +43,10 @@ setw -g window-status-style          'fg=colour4 dim'
 setw -g window-status-format         '[#W #F]'
 setw -g window-status-bell-style     'fg=colour3 bg=default bold'
 
-# Start windows and panes at 1, not 0
+# Start windows and panes at 1
 set  -g base-index      1
 setw -g pane-base-index 1
+set-option -g renumber-windows on
 
 # messages
 set -g message-style 'fg=blue bg=default bold'
