--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,6 +3,8 @@ mouse-hide-while-typing = true
 cursor-style-blink = true
 cursor-invert-fg-bg = false
 
+cursor-color = cell-foreground
+
 macos-titlebar-style = hidden
 macos-titlebar-proxy-icon = hidden
 macos-option-as-alt = false
@@ -10,6 +12,7 @@ macos-option-as-alt = false
 window-decoration = auto
 window-colorspace = srgb
 window-padding-x = 10
+window-padding-y = 10
 background-opacity = 1
 background-blur = false
 
