--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -10,8 +10,9 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-    'exec-and-forget sketchybar',
-    'exec-and-forget borders'
+    'exec-and-forget sketchybar --reload',
+    'exec-and-forget borders',
+    'aerospace workspace 1'
 ]
 
 # Start AeroSpace at login
