--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -16,13 +16,15 @@ window-padding-y = 10
 background-opacity = 1
 background-blur = false
 
-
 # font-family = JetBrainsMono NFM Regular
 font-family = CommitMono
 font-style-italic = true
 font-size = 16
 
 # adjust-cell-width = -5%
-adjust-cell-height = 5%
+adjust-cell-height = 2%
 
 theme = dark:my-kanagawa-dark,light:"Monokai Pro Light"
+
+quick-terminal-size = 50%
+keybind = ctrl+,=toggle_quick_terminal
