--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-s
 bind-key r source ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 bind C-s send-prefix
 bind C-l send-keys 'C-l'
+bind C-k clear-history
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",*:RGB,*:Tc"
