fix fzf gutter and pointer

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -63,7 +63,7 @@ bind c new-window -c "#{pane_current_path}"
 # Sesh
 bind C-s run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 66%,66% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' --gutter ' ' --pointer ' ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
