--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,30 +1,15 @@
 mouse-hide-while-typing = true
 
-cursor-style-blink = true
-cursor-invert-fg-bg = false
+shell-integration-features = no-cursor
 
+cursor-style = underline
+cursor-style-blink = true
 cursor-color = cell-foreground
 
-macos-titlebar-style = hidden
-macos-titlebar-proxy-icon = hidden
-macos-option-as-alt = false
-
 window-decoration = auto
-window-colorspace = srgb
 window-padding-x = 10
 window-padding-y = 10
 background-opacity = 1
 background-blur = false
 
-# font-family = JetBrainsMono NFM Regular
-font-family = CommitMono
-font-style-italic = true
-font-size = 16
-
-# adjust-cell-width = -5%
-adjust-cell-height = 2%
-
-theme = dark:my-kanagawa-dark,light:"Monokai Pro Light"
-
-quick-terminal-size = 50%
-keybind = global:ctrl+,=toggle_quick_terminal
+theme = my-kanagawa-dark
