--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,7 +1,7 @@
 format = """
 $username$hostname \
 $directory\
-($git_branch$git_state$git_status) \
+$git_branch$git_commit$git_status$git_metrics$git_state \
 $python\
 $line_break\
 $character
@@ -19,7 +19,6 @@ show_always = true
 style = 'purple'
 format = '[$ssh_symbol$hostname]($style)'
 ssh_only = true
-aliases = {"Max-Macbook-Pro" = "home"}
 
 [directory]
 style = "blue"
@@ -33,17 +32,19 @@ error_symbol = "[❯](red)"
 vimcmd_symbol = "[❮](purple)"
 
 [git_branch]
-format = "([$branch]($style))"
+format = "[$branch]($style) "
 style = "bright-black"
+
+[git_metrics]
+disabled = false
 
 [git_status]
 style = "purple"
-format = '([$all_status$ahead_behind]($style))'
-modified = "*"
+# format = '[$all_status$ahead_behind]($style)'
 stashed = "≡"
 
 [git_state]
-format = '\([$state( $progress_current/$progress_total)]($style)\)'
+format = '[\($state $progress_current\$progress_total\)]($style)'
 style = "bright-black"
 
 [cmd_duration]
