--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -5,9 +5,13 @@ cursor-style-blink = true
 cursor-color = cell-foreground
 
 window-decoration = auto
-window-padding-x = 10
-window-padding-y = 10
+window-padding-x = 5
+window-padding-y = 5
 background-opacity = 1
 background-blur = false
 
+font-family = 'CommitMono Nerd Font Mono'
+
 theme = my-kanagawa-dark
+
+keybind = ctrl+shift+i=ignore
