--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -63,16 +63,17 @@ bind c new-window -c "#{pane_current_path}"
 
 # Sesh
 bind C-s run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 66%,66% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' --gutter ' ' --pointer ' ' \
+  sesh list --icons | fzf-tmux -p 75%,66% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '  ' --gutter ' ' --pointer ' ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --color='header:0' \
     --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-a:change-prompt(  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(  )+reload(sesh list --icons)' \
     # --preview-window 'right:55%' \
     # --preview 'sesh preview {}'
 )\""
