--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,12 +6,13 @@ cursor-style-blink = true
 cursor-color = cell-foreground
 
 window-decoration = auto
-window-padding-x = 5
+window-padding-x = 10
 window-padding-y = 5
 background-opacity = 1
 background-blur = false
 
-font-family = 'CommitMono Nerd Font Mono'
+font-family = "CommitMonoSpaced"
+font-size = 14
 
 theme = my-kanagawa-dark
 
