--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -3,7 +3,6 @@
 ###################
 
 $terminal = ghostty
-$menu = walker
 $fileManager = thunar
 $browser = zen-browser
 
@@ -11,7 +10,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod SHIFT, Q, exit,
 
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, SPACE,  exec, $menu
+bind = $mainMod, SPACE,  exec, bss-arch-launch-walker
 bind = $mainMod, E,      exec, $fileManager
 bind = $mainMod, B,      exec, $browser
 
