--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,7 +3,8 @@
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/bindings.conf
+source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/looknfeel.conf
 
-source = ~/.config/hypr/windows-workspaces.conf
+source = ~/.config/hypr/windows.conf
 source = ~/.config/hypr/startup.conf
