(hypr): use bss-arch scripts for walker/browser

--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -2,17 +2,13 @@
 ### KEYBINDINGS ###
 ###################
 
-$terminal = ghostty
-$fileManager = thunar
-$browser = zen-browser
-
 $mainMod = SUPER # Sets "Windows" key as main modifier
-bind = $mainMod SHIFT, Q, exit,
+# bind = $mainMod SHIFT, Q, exit,
 
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, SPACE,  exec, bss-arch-launch-walker
-bind = $mainMod, E,      exec, $fileManager
-bind = $mainMod, B,      exec, $browser
+bind = $mainMod, RETURN, exec, uwsm-app -- $TERMINAL
+bind = $mainMod, SPACE,  exec, bss-launch-walker
+bind = $mainMod, B,      exec, bss-launch-browser
+bind = $mainMod, E,      exec, uwsm-app -- thunar
 
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Q, killactive,
