--- a/hypr/.config/hypr/startup.conf
+++ b/hypr/.config/hypr/startup.conf
@@ -2,6 +2,11 @@ exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = waybar
 
+# needed for walker
+exec-once = uwsm-app -- elephant
 # start walker as a service for speed
-exec-once = elephant
-# exec-once = walker --gapplication-service
+exec-once = uwsm-app -- walker --gapplication-service
+
+# Slow app launch fix -- set systemd vars
+exec-once = systemctl --user import-environment $(env | cut -d'=' -f 1)
+exec-once = dbus-update-activation-environment --systemd --all
