--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -1,8 +1,10 @@
 after-login-command = []
-after-startup-command = [
-    'exec-and-forget sketchybar --reload',
-    # 'exec-and-forget borders',
-]
+
+# after-startup-command = [
+#     'exec-and-forget sketchybar --reload',
+#     'exec-and-forget borders',
+# ]
+
 start-at-login = true
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
@@ -13,9 +15,9 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # on-focused-changed = ['move-mouse window-lazy-center']
 
 # Notify Sketchybar about workspace change
-exec-on-workspace-change = ['/bin/bash', '-c',
-    'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE'
-]
+# exec-on-workspace-change = ['/bin/bash', '-c',
+#     'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE'
+# ]
 
 automatically-unhide-macos-hidden-apps = true
 
