(hypr): no animations, squared

--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -1,7 +1,7 @@
 general {
     gaps_in = 5
-    gaps_out = 10,20,10,20
-    border_size = 1
+    gaps_out = 10,20,20,20
+    border_size = 2
     col.active_border = rgba(caa88b40)
     col.inactive_border = rgba(00000000)
     resize_on_border = false
@@ -10,8 +10,8 @@ general {
 }
 
 decoration {
-    rounding = 2
-    rounding_power = 2
+    rounding = 0
+    rounding_power = 1
     active_opacity = 1
     inactive_opacity = 0.75
 
@@ -31,7 +31,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     #        NAME,           X0,   Y0,   X1,   Y1
     bezier = easeOutQuint,   0.23, 1,    0.32, 1
@@ -67,7 +67,7 @@ dwindle {
 
 master {
     new_status = slave
-    mfact = 0.50
+    mfact = 0.5
 }
 
 misc {
